src/main/default/objects/AccountStatusUpdateBatchSetting__mdt/AccountStatusUpdateBatchSetting__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata which stores configurable values used in the automation of the batch account status updates.</description>
    <label>Account Status Update Batch Setting</label>
    <pluralLabel>Account Status Update Batch Settings</pluralLabel>
</CustomObject>