src/main/default/objects/AccountStatusUpdateBatchSetting__mdt/fields/InitialAccountStatuses__c.field-meta.xml
<CustomField>
    <fullName>InitialAccountStatuses__c</fullName>
    <label>Initial Account Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>