src/main/default/objects/AccountStatusUpdateBatchSetting__mdt/fields/NoOfWeeksNoOrdersMidLimit__c.field-meta.xml
<CustomField>
    <fullName>NoOfWeeksNoOrdersMidLimit__c</fullName>
    <label>No of Weeks No Orders - Mid Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>