src/main/default/objects/AccountStatusUpdateBatchSetting__mdt/fields/OrderTypes__c.field-meta.xml
<CustomField>
    <fullName>OrderTypes__c</fullName>
    <label>Order Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>